CHANGES IN FLTK 1.1.0

	- Fixed some window focus/positioning problems under
	  MacOS X.
	- Added fl_create_alphamask() function to create an alpha
	  mask from 8-bit data; currently this always generates a
	  1-bit screen-door bitmask, however in the future it will
	  allow us to generate N-bit masks as needed by various
	  OS's.
	- Fl_File_Browser::load() didn't properly show drives
	  when compiled in Cygwin mode.
	- Now pass correctly pass keyboard and mouse events to
	  widget under tooltip as needed...
	- Added new Fl::dnd_text_ops() methods to enable/disable
	  drag-and-drop text operations.
	- Fl_Input now supports clicking inside a selection to
	  set the new text position when drag-and-drop is
	  enabled.
	- Added support of X resources for scheme, dnd_text_ops,
	  tooltips, and visible_focus...
	- Fixed some case problems in includes for the MacOS X
	  code.
	- Fl_Widget::handle() returned 1 for FL_ENTER and
	  FL_LEAVE events, which caused some compatibility
	  problems with 1.0 code.
	- Fl_Box::handle() now returns 1 for FL_ENTER and
	  FL_LEAVE events so that tooltips will work with Fl_Box
	  widgets.
	- Some source files still defined strcasecmp and
	  strncasecmp under WIN32.
	- Some source files still used the "false" and "true"
	  C++ keywords, even though several of our "supported"
	  C++ compilers don't support them.  Using 0 and 1 until
	  FLTK 2.0 (which uses the bool type instead of int for
	  any boolean values...)
	- Minor Fl_Color revamping, so that color constants map
	  to the color cube and FL_FOREGROUND_COLOR,
	  FL_BACKGROUND_COLOR, FL_BACKGROUND2_COLOR,
	  FL_INACTIVE_COLOR, and FL_SELECTION_COLOR map to the
	  user-defined colors.


CHANGES IN FLTK 1.1.0b13

	- Fixed a bug in the Xft support in Fl_Window::hide()
	  (the config header wasn't included, so the Xft code
	  wasn't getting called)
	- Xdbe support must now be enabled explicitly using
	  --enable-xdbe due to inconsistent bugs in XFree86 and
	  others.